Add many-to-many association between event and category

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,7 +8,7 @@
   <div class="col-md-9">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        Your event_params
+        Your events
       </div>
       <div class="panel-body">
 
