--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,7 @@
 
   <div class="panel-body">
 
-    <p>Address: <%= @event.name %></p>
+    <p>Name: <%= @event.name %></p>
     <p>Host: <%= @event.description %></p>
 
     <hr>
@@ -31,12 +31,12 @@
     <br>
     <br>
 
-    <p>Categories: <%= @event.active %></p>
+    <!--<p>Categories: <%#= @event.active %></p>-->
 
-    <h4>Themes</h4>
-    <%# @categories.each do |cate| %>
-      <span class="label label-success"><%#= cate.name %></span>
-    <%# end %>
+    <h4>Categories</h4>
+    <% @categories.each do |cate| %>
+      <span class="label label-success"><%= cate.name %></span>
+    <% end %>
 
   </div>
 
