--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -17,11 +17,11 @@
 
 <div class="form-group col-md-12">
   <label>Categories</label>
-  <%#= f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |b| %>
+  <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |b| %>
     <div class="form-group">
-      <%#= b.check_box(class: "check_box") %> <%#= b.object.name %>
+      <%= b.check_box(class: "check_box") %> <%= b.object.name %>
     </div>
-  <%# end %>
+  <% end %>
 </div>
 
 <div class="form-group col-md-12">
@@ -89,7 +89,7 @@
 
 
 <div class="form-group col-md-12">
-  <label>Amenities</label>
+  <label>Extra</label>
   <div class="input-group">
     Food included  <%= f.check_box :includes_food %>
   </div>
