--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,6 +38,12 @@
       <span class="label label-success"><%= cate.name %></span>
     <% end %>
 
+    <!-- Photos -->
+<h4>Photos</h4>
+<% @events.photos.each do |event| %>
+  <%= image_tag photo.image %>
+<% end %>
+
   </div>
 
 </div>
