--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,6 +31,11 @@
     <br>
     <br>
 
+    <!-- Photos -->
+<h4>Photos</h4>
+<% @event.photos.each do |photo| %>
+  <%= image_tag photo.image %>
+<% end %>
     <!--<p>Categories: <%#= @event.active %></p>-->
 
     <h4>Categories</h4>
@@ -38,11 +43,7 @@
       <span class="label label-success"><%= cate.name %></span>
     <% end %>
 
-    <!-- Photos -->
-<h4>Photos</h4>
-<% @events.photos.each do |event| %>
-  <%= image_tag photo.image %>
-<% end %>
+
 
   </div>
 
