Create Photo: Model

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @event do |f| %>
+<%= form_for @event, html: { multipart: true } do |f| %>
 
 <div class="form-group col-md-12">
   <label>Add a new Event</label>
@@ -102,6 +102,18 @@
 <br>
 <hr>
 <br>
+
+<label>Photos</label>
+
+<div class="form-group">
+  <span class="btn btn-default">
+    Upload Photos
+    <%= file_field_tag "images[]", type: :file, multiple: true %>
+  </span>
+</div>
+<div id="photos">
+  <%= render 'photos/list' %>
+</div>
 
 
 
