--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,11 +32,14 @@
     <br>
 
     <!-- Photos -->
-    <h4>Photos</h4>
-    <% @event.photos.each do |photo| %>
-      <%= image_tag photo.image %>
-    <% end %>
-
+<h4>Photos</h4>
+<% @event.photos.each do |photo| %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <%= image_tag photo.image.thumbnail %>
+  </div>
+</div>
+<% end %>
 
     <!--<p>Categories: <%#= @event.active %></p>-->
 
