--- a/app/views/photos/_list.html.erb
+++ b/app/views/photos/_list.html.erb
@@ -3,11 +3,10 @@
     <div class="panel panel-default">
       <div class="panel-heading preview">
         <%= image_tag photo.image.thumbnail %>
-      </div>
-      <div class="panel-body">
-        <span class="btn btn-default">Delete</span>
 
-      </div>
-    </div>
+        <%= link_to "Delete", event_path( photo.id ), class: "btn btn-default", method: :delete, data: { confirm: "Are you sure?" } %>
+
+
+
   <% end %>
 <% end %>
