--- a/app/views/photos/_list.html.erb
+++ b/app/views/photos/_list.html.erb
@@ -3,10 +3,11 @@
     <div class="panel panel-default">
       <div class="panel-heading preview">
         <%= image_tag photo.image.thumbnail %>
-
+        
+   <div class"panel-body">
         <%= link_to "Delete", event_path( photo.id ), class: "btn btn-default", method: :delete, data: { confirm: "Are you sure?" } %>
 
-
+</div>
 
   <% end %>
 <% end %>
