--- a/app/views/photos/_list.html.erb
+++ b/app/views/photos/_list.html.erb
@@ -3,9 +3,9 @@
     <div class="panel panel-default">
       <div class="panel-heading preview">
         <%= image_tag photo.image.thumbnail %>
-        
+
    <div class"panel-body">
-        <%= link_to "Delete", event_path( photo.id ), class: "btn btn-default", method: :delete, data: { confirm: "Are you sure?" } %>
+        <%= link_to "Delete", photo_path( photo.id ), class: "btn btn-default", method: :delete, data: { confirm: "Are you sure?" } %>
 
 </div>
 
